<resources>
    <string name="app_name">Guess the Word</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_ready_to_text">Get ready to</string>
    <string name="guess_the_word_text">guess the word</string>
    <string name="play_text">Play</string>
  <string name="the_word_is_text">The word is...</string>
    <string name="placeholder_text">\"guitar\"</string>
  <string name="skip_text">Skip</string>
  <string name="got_it_text">Got it</string>
  <string name="placeholder_timer_text">00:58</string>
  <string name="placeholder_current_score_text">Current score is: 0</string>
  <string name="play_again">Play Again</string>
  <string name="you_scored">You scored</string>
</resources>
