<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="dev.foodie.guessit.fragments.TitleFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/get_ready_to_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/get_ready_to_text"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      android:textColor="@android:color/black"
      android:textSize="18sp"
      app:layout_constraintBottom_toTopOf="@id/guess_the_word_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias=".9" />

    <TextView
      android:id="@+id/guess_the_word_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/guess_the_word_text"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textSize="30sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias=".4" />

    <Button
      android:id="@+id/play_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/play_text"
      app:theme="@style/GoButton"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias=".95" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>